css/styles.css
body {
  color: #ffffff;
  background-color: #000000;
  margin: 0;
  text-align: center;
  font-family: 'Merriweather', serif;
}

h1 {
  color: #32CD32;
  font-size: 5.625rem;
  margin: 50px auto 0 auto;
  font-family: 'Bebas Neue', cursive;
}

h2 {
  color: #32CD32;
  font-family: 'Montserrat', sans-serif;
  font-size: 2.5rem;
  font-weight: normal;
  padding-bottom: 10px;
}

h3 {
  color: #32CD32;
  font-family: 'Montserrat', sans-serif;
  display:inline
}

p {
  line-height: 2;
}

hr {
  border: dotted #EAF6F6 6px;
  border-bottom: none;
  width: 4%;
  margin: 100px auto;
}

a{
  color: #11999E;
  font-family: 'Montserrat', sans-serif;
  margin: 10px 20px;
  text-decoration: none;
}

a.project{
  color: #32CD32;
  font-family: 'Montserrat', sans-serif;
  display:inline;
  font-size: 1.17em;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  font-weight: bold;
}

a.project:hover{
  color: #ffffff;
}

.topnav {
  background-color: #000000;
  overflow: hidden;
}

.topnav a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover{
  background-color: #ffffff;
  color: black;
  border-radius: 5%;
}

.topnav a.active {
  background-color: #32CD32;
  color: white;
  border-radius: 5%;
}

.topnav .icon {
  display: none;
}

.container {
  position: relative;
  text-align: center;
  background-color: #000000;
}

.centered{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.middle-container {
  margin: 20px 0 100px 0;
}

.bottom-container {
  background-color: #32CD32;
  padding: 50px 0 20px;
}

.skill-row {
  width: 60%;
  margin: 50px auto 12% auto;
  text-align: left;
}

.skill-row-second {
  width: 60%;
  margin: 250px auto 100px auto;
  text-align: left;
}

.skill-row-third {
  width: 60%;
  margin: 0px auto 12% auto;
  text-align: left;
}

.todo-list {
  float: left;
  width: 50%;
  border-radius: 3%;
  height: auto;
  margin-right: 30px;
}

.pro {
  text-decoration: underline;
}

.intro {
  width: 30%;
  margin: auto;
}

.contact-message {
  width: 40%;
  margin: 40px auto 60px;
}

.copyright {
  color: #EAF6F6;
  font-size: 0.75rem;
  padding: 20px 0;
}

.top-cloud {
  position: absolute;
  right: 300px;
  top: 40px;
}

.bottom-cloud {
  position: absolute;
  left: 250px;
  bottom: 300px;
}

.code-img {
  width: 50%;
  border-radius: 3%;
  height: auto;
  float: left;
  margin-right: 30px;
}

.programming-img {
  width: 10%;

  height: auto;
}

.todo-img {
  width: 60%;
  border-radius: 3%;
  height: auto;
  float: left;
  margin-right: 30px;
}

.dice-img {
  width: 55%;
  border-radius: 3%;
  height: auto;
  float: right;
  margin-left: 30px;
}

.btn {
  -webkit-border-radius: 8;
  -moz-border-radius: 8;
  border-radius: 8px;
  font-family: 'Montserrat', sans-serif;
  color: #ffffff;
  background-color: #32CD32;
  font-size: 20px;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
}

.btn:hover {
  background-color: #ffffff;
  color: black;
  text-decoration: none;
}
.logo{
  width: 9%;
  height: auto;
}

.logo-2{
  width: 12%;
  height: auto;
  margin-left: 1%;
}

.cover{
  width: 100%;
  height: auto;
  object-fit: cover;
}

p.upright{
  text-orientation: upright;
  writing-mode: vertical-rl;
  position: absolute;
  top: 0;

}

/* @media screen and (max-width: 600px){
  img.cover{
    width: 1038.4px;
    height: 584.4px;
    object-fit: fill;
  }
} */

@media screen and (max-width: 600px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}

@media screen and (max-width: 922.4px){
  h1{
    font-size: 3rem;
  }
}

/* Animation */
h1.typewriter {
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-right: .15em solid black; /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  animation:
    typing 3.5s steps(40, end),
    blink-caret .75s step-end infinite;
}

p.typewriter {
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-bottom: .15em solid black; /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  animation:
    code 3.5s steps(40, end),
    blink-caret .75s step-end infinite;
}

/* The typing effect */
@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: white; }
}

